[package]
name = "decaying"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
basic-toml = "0.1.2"
bytesize = { version = "1.2.0", features = ["serde"] }
dirs = "4.0.0"
humantime-serde = "1.1.1"
log = "0.4.17"
serde = { version = "1.0.156", features = ["derive"] }
thiserror = "1.0.39"
